@@ -1,5 +1,7 @@
 DECL|class|QSQLiteDriverPrivate
 DECL|class|QSQLiteResultPrivate
+DECL|enumerator|Value
+DECL|enumerator|Value
 DECL|function|QSQLiteDriver
 DECL|function|QSQLiteDriver
 DECL|function|QSQLiteDriverPrivate
@@ -46,3 +48,7 @@ DECL|member|results
 DECL|member|skipRow
 DECL|member|skippedStatus
 DECL|member|stmt
+DECL|namespace|QtPrivate
+DECL|namespace|QtPrivate
+DECL|struct|IsPointerToTypeDerivedFromQObject
+DECL|struct|IsPointerToTypeDerivedFromQObject
